# tcpInferenceServer

./: CMakeLists.txt  inference.cpp  inference.hpp  main.cpp  tcpserver.cpp  tcpserver.hpp  uicom.cpp  uicom.hpp
